Backend upload fix